<resources>
    <string name="app_name">SembakoPedia</string>
    <string name="creator">By : Rivaldo Rendy Mathindas</string>

    <string name="please_wait">Please wait…</string>
    <string name="tap_back_again_to_exit">Tap back again to exit</string>

    <string name="image">Image</string>
    <string name="email_address">Email address</string>
    <string name="location">Location</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="not_a_member_yet">Not a member yet?</string>
    <string name="register">Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="sign_up">Sign Up</string>
    <string name="i_accept_the">I accept the</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm password</string>

    <string name="password_incorrect">Password incorrect</string>
    <string name="account_not_found">Account not found. Have you signed up?</string>
    <string name="error_signing_in">Error signing in. Please try again.</string>
    <string name="error_signing_up">Error signing up. Please try again.</string>
    <string name="alert_forgot_password">Instructions to reset your password will be sent to</string>
    <string name="send_email">SEND EMAIL</string>
    <string name="email_sent">Email sent</string>
    <string name="incorrect_email_format">Incorrect email format</string>
    <string name="email_not_sent">Email not sent. Please try again.</string>
    <string name="welcome_back">Welcome back</string>
    <string name="welcome">Welcome</string>
    <string name="fetching_user_data_failed">Fetching user data failed with</string>
    <string name="does_not_match_password">Does not match password</string>
    <string name="please_check_the_terms_and_conditions">Please check the terms and conditions</string>
    <string name="please_select_a_profile_picture">Please select a profile picture</string>
    <string name="please_enter_a_stronger_password">Please enter a stronger password</string>
    <string name="account_already_exists">Account already exists. Please log in.</string>
    <string name="cropping_error">Cropping error</string>
    <string name="home">Home</string>
    <string name="my_sales">My Sales</string>
    <string name="my_purchases">My Purchases</string>
    <string name="incoming_orders">Incoming Orders</string>
    <string name="statistics">Statistics</string>
    <string name="chats">Chats</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="logout">Log out</string>
    <string name="loading">Loading</string>
    <string name="are_you_sure_to_log_out">Are you sure to log out ?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>

    <string name="upload_products">Upload products</string>
    <string name="please_connect_to_the_internet">Please connect to the internet!</string>
    <string name="please_select_atleast_2_images">Please select atleast 2 images…</string>
    <string name="please_fill_all_fields">Please fill all fields!</string>
    <string name="uploading_images">Uploading images…</string>
    <string name="uploading_product_details">Uploading product details…</string>
    <string name="product_successfully_uploaded">Product successfully uploaded</string>
    <string name="error_uploading_product">Error uploading product. Please try again</string>
    <string name="make_order">Make order</string>
    <string name="delete">DELETE</string>
    <string name="deleted">deleted</string>
    <string name="making_order">Making order…</string>
    <string name="error_making_order">Error making order. Please try again</string>
    <string name="product_information">Product Information</string>
    <string name="product_name">Product name</string>
    <string name="product_details">Product Details</string>
    <string name="type_of_product">Type of product</string>
    <string name="product_category">Product category</string>
    <string name="post_product">Post Product</string>
    <string name="available_quantity">Available Quantity</string>
    <string name="unit_price">Unit Price</string>
    <string name="statistic">Statistics %1$s</string>
    <string name="prediction">Prediction %1$s</string>

    <string name="setting">Setting</string>
    <string name="change_language">Change Language</string>
    <string name="alarm_daily_reminder_on">Daily Reminder : ON</string>
    <string name="alarm_daily_reminder_off">Daily Reminder : OFF</string>
    <string name="alarm_title">Sembakopedia Reminder</string>
    <string name="alarm_text">Lets check today\'s market prices</string>
    <string name="channel_name">Reminder</string>
    <string name="daily_reminder">Daily Reminder</string>

    <string name="asking_price">Asking price</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_available">Quantity available</string>
    <string name="desc">Description</string>
    <string name="choose_photos">Choose photos</string>
    <string name="upload_photos">Upload photos</string>
    <string name="add_atleast_2_photos">(Add atleast 2 photos)</string>
    <string name="no_chats">No chats added yet</string>
    <string name="no_product_added_yet">No product added yet</string>
    <string name="no_product_posted_yet">No product posted yet</string>
    <string name="how_many_products_do_you_need">How many products do you need?</string>
    <string name="delivery_location">Enter delivery location</string>
    <string name="no_messages_added_yet">No messages added yet</string>
    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
    <string name="write_desc">Add a description about the product…</string>
    <string name="write_a_message">Write a message…</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="all">All</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="delete_product">DELETE PRODUCT</string>
    <string name="contact_seller">Contact seller</string>
    <string name="no_product_ordered_yet">No product ordered yet</string>
    <string name="version">Version</string>
    <string name="no_product_orders_placed_yet">No product orders placed yet</string>
    <string name="tommorrow_prediction">Tommorrow Prediction : Rp.</string>

    <string-array name="makes">
        <item name="beras">Beras</item>
        <item name="gula">Gula</item>
        <item name="minyak_goreng">Minyak Goreng</item>
        <item name="daging">Daging</item>
        <item name="minyak_lpg">Minyak Tanah dan Gas LPG</item>
        <item name="susu">Susu</item>
        <item name="hasil_tani">Hasil tani</item>
        <item name="telur">Telur</item>
        <item name="garam">Garam</item>
        <item name="lainnya">Lainnya</item>
    </string-array>

    <string-array name="beras">
        <item name="superwin">Beras superwin</item>
        <item name="temo">Beras temo</item>
        <item name="nurdin">Beras nurdin</item>
        <item name="pulo">Beras pulo</item>
        <item name="lainnya">Beras lainnya</item>
    </string-array>

    <string-array name="gula">
        <item name="lokal">Gula lokal</item>
        <item name="premium">Gula premium</item>
    </string-array>

    <string-array name="susu">
        <item name="umum">Susu umum</item>
        <item name="ibu_hamil">Susu ibu hamil</item>
        <item name="bayi">Susu bayi</item>
    </string-array>

    <string-array name="minyak_goreng">
        <item name="lokal">Minyak goreng lokal</item>
        <item name="premium">Minyak goreng premium</item>
    </string-array>

    <string-array name="minyak_lpg">
        <item name="minyak_tanah">Minyak tanah</item>
        <item name="gas_lpg">Gas LPG</item>
    </string-array>

    <string-array name="daging">
        <item name="ayam">Daging ayam</item>
        <item name="sapi">Daging sapi</item>
        <item name="kambing">Daging kambing</item>
    </string-array>

    <string-array name="hasil_tani">
        <item name="jagung">Jagung</item>
        <item name="wortel">Wortel</item>
        <item name="terong">Terong</item>
    </string-array>

    <string-array name="telur">
        <item name="ayam">Telur ayam</item>
        <item name="bebek">Telur bebek</item>
    </string-array>

    <string-array name="garam">
        <item name="lokal">Garam lokal</item>
        <item name="premium">Garam premium</item>
    </string-array>

    <string-array name="lainnya">
        <item name="lainnya">lainnya</item>
    </string-array>

    <string-array name="holder">
        <item name="category">Mohon dipilih</item>
    </string-array>

</resources>